# flowfix-assistant

./: .gitignore  CLAUDE.md  build.gradle.kts  settings.gradle.kts
backend/: CLAUDE.md  build.gradle.kts
backend/src/main/kotlin/com/wemeet/flowfixassistant/application/chat/: ChatService.kt  RagClientService.kt
backend/src/main/kotlin/com/wemeet/flowfixassistant/chat/application/: ChatService.kt  RagClient.kt  TokenUsageService.kt
backend/src/main/resources/: application-docker.yaml  application-local.yaml  application.yaml
backend/src/main/resources/db/migration/: V1__init_schema.sql  V2__add_audit_columns.sql
backend/src/test/kotlin/com/wemeet/flowfixassistant/: FlowfixAssistantApplicationTests.kt
backend/src/test/resources/: application.yaml
rag-engine/: .env.example  Dockerfile  pyproject.toml
rag-engine/src/: main.py
rag-engine/src/api/: chat_router.py  health_router.py  index_router.py  routes.py
rag-engine/src/chain/: document_chain.py  hybrid_chain.py  query_router.py  sql_chain.py
rag-engine/src/config/: database.py  settings.py
rag-engine/src/core/: embeddings.py  llm_client.py  pii_masker.py  token_tracker.py  vector_store.py
rag-engine/src/indexer/: db_schema_indexer.py  document_loader.py  metadata_extractor.py  text_splitter.py
rag-engine/src/middleware/: error_handler.py  logging_middleware.py
rag-engine/src/models/: schemas.py
rag-engine/tests/: test_chat_router.py  test_health.py  test_pii_masker.py  test_token_tracker.py
src/main/kotlin/com/wemeet/flowfixassistant/: FlowfixAssistantApplication.kt
(+95 files in other folders)
