[project]
name = "flowfix-rag-engine"
version = "0.1.0"
description = "FlowFix Assistant RAG Engine - 문서/DB 검색 및 LLM 답변 생성"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    "sentence-transformers>=3.3",
    "anthropic>=0.40",
    "openai>=1.60",
    "httpx>=0.28",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
